# Central_Inteligencia_Juridica

./: .dockerignore  .env.dev  .env.docker.example  .env.example  .env.prod  .env.template  .gitignore  .gitleaks.toml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPACT.md  LICENSE  README.md  SECURITY.md  TESTING.md  alembic.ini  buildtoflip-v6-certificate.md  buildtoflip-v6.1-certificate.md  despachar_tarefa.py  discovery-consensus.v6.json  docker-compose.local.yml  docker-compose.yml  fallback-strategy.md  fase1-merge.sh  fase1-security.sh  fase2-tests.py  fase3-cleanup.sh  fase4-quality.sh  fase5-final.sh  fase5b-fix-tests.sh  fase6-fix-tests.sh  fase6b-fix-voting.sh  fase7-final.sh  gitignore  handoff-codex.md  metrics-advanced.yaml  metrics.yaml  orchestration-matrix.md  (+11 more)
.buildtoflip/: agent_constitution.yaml  v6.1-implementation-checklist.md
.github/: pull_request_template.md
alembic/: env.py
ansible/: playbook.yml
certificates/: prompt_chaining.json
docker/: Dockerfile  Dockerfile.sandbox  docker-compose-prod.yml  docker-compose.yml  prometheus.yml
docs/: ADICIONAR_NOVO_DOMINIO.md  ARCHITECTURE_C4.md  AUDITORIA_CONFORMIDADE.md  BPM-DMN.md  COORDENACAO_ONDA2.md  GUIA_DE_USO.md  MANUAL_ESTUDANTE.md  PLANO_IMPLEMENTACAO_UNIFICADO.md  PLANO_MESTRE_MELHORIAS.md  ROADMAP_ONDA2.md  acaoPendenteDono.md  architecture-decisions.md  buildtoflip-v6.1-reality-check.md  cloud-readiness.md  decision-ledger.jsonl  executive-summary-final.md  pendencia_v1.md  roadmap_v1.md  training-quickstart.md  training-system.md  troubleshooting.md
src/: config.py  (+3 more)
(+819 files in other folders)
